k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /items-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: items-service
                port:
                  number: 8080
          - path: /invoice-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: invoicing-service
                port:
                  number: 8080
          - path: /mail-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: mailing-service
                port:
                  number: 8080
          - path: /ratings-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ratings-service
                port:
                  number: 8080
          - path: /users-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 8080
          - path: /navigation-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: navigation-service
                port:
                  number: 8080
          - path: /delivery-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: delivery-service
                port:
                  number: 8080
          - path: /mailhog(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: mailhog
                port:
                  number: 8025
